# file-compressor-hff-lzw

./: CMakeLists.txt  README.md  main.cpp  test.hff  test.lzw  test.txt
inc/: LZW.h  compressor.h  huffman.h  huffman_compressor.h  huffman_interface.h  node_huffman.h
src/: LZW.cpp  huffman.cpp  huffman_compressor.cpp
